# genesis

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.md  a  a.c  b  bitlevel  bitlevel.c  boolean  boolean.c  config.h  config.h.in  config.status  configure  configure.ac  gasoline  gasoline.c  math.c  serie  serie.c  staex.c  stringlib.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
binaries/: arrays  banking  fibonacci  formulae  functional  hello  loops  macro  math  pointers  recurse  scan  seqfiles  staex  stock  stringlib  struct  temperature  union
data/: me  myself
includes/: fibonacci.h  macros.h  pointers.h  seqfiles.h  struct.h
src/: .temp  Makefile  Makefile.in  arrays.c  b.c  banking.c  banking.h  bitlevel.c  boolean.c  fibonacci.c  formulae.c  functional.c  hello.c  loops.c  macro.c  pointers.c  recurse.c  scan.c  seqfiles.c  seqfunctions.h  stock.c  stock.h  stringlib.c  struct.c  structArray.h  temperature.c  union.c
